Fix overflowing content inside card

--- a/web/src/components/device-card/device-card/device-card.css
+++ b/web/src/components/device-card/device-card/device-card.css
@@ -118,7 +118,11 @@
 .device-info-card-container__body_row_value {
   font-size: 12px;
   font-weight: 600;
-  word-break: break-all;
+  width: 100%;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  width: 190px;
   color: rgb(61, 59, 59);
 }
 
